--- a/trunk/res/layout/create_event.xml
+++ b/trunk/res/layout/create_event.xml
@@ -128,6 +128,38 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:soundEffectsEnabled="true" />
+
+<!--             <ListView xmlns:android="http://schemas.android.com/apk/res/android" -->
+<!--                 android:id="@+id/meeting_reqs_view" -->
+<!--                 android:layout_width="fill_parent" -->
+<!--                 android:layout_height="fill_parent" > -->
+
+<!--             </ListView> -->
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+
+                <ImageButton
+                    android:id="@+id/foodButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/food" />
+
+                <ImageButton
+                    android:id="@+id/silenceButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/silence" />
+
+                <ImageButton
+                    android:id="@+id/itButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/wifi" />
+
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
     <LinearLayout
