setting up data for testing

--- a/res/values/friends.xml
+++ b/res/values/friends.xml
@@ -2,6 +2,7 @@
     <string-array name="friends_array">
         <item>annie</item>
         <item>carl</item>
+        <item>christina</item>
         <item>dan</item>
         <item>eli</item>
         <item>farina</item>
