--- a/res/layout/create_event.xml
+++ b/res/layout/create_event.xml
@@ -116,7 +116,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/locations_req_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Suggested locations must have:"
