--- a/trunk/res/layout/profile.xml
+++ b/trunk/res/layout/profile.xml
@@ -36,7 +36,7 @@
        android:layout_height="wrap_content"
        android:orientation="vertical" >
         
-    <EditText
+    <TextView
         android:id="@+id/personEmail"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -44,9 +44,10 @@
         android:editable="false"
         android:ems="10"
         android:focusable="false"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress" 
+        android:textColor="@android:color/black" />
 
-   <EditText
+   <TextView
        android:id="@+id/personPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
@@ -54,9 +55,10 @@
        android:editable="false"
        android:ems="10"
        android:focusable="false"
-       android:inputType="phone" />
+       android:inputType="phone"
+       android:textColor="@android:color/black" />
 
-   <EditText
+   <TextView
        android:id="@+id/personAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
@@ -64,7 +66,8 @@
        android:editable="false"
        android:ems="10"
        android:focusable="false"
-       android:inputType="textPostalAddress" />
+       android:inputType="textPostalAddress"
+       android:textColor="@android:color/black"  />
        
    </LinearLayout>
  <LinearLayout
