--- a/trunk/res/layout/profile.xml
+++ b/trunk/res/layout/profile.xml
@@ -30,8 +30,14 @@
         android:text="my name is here"
         />
         
+   <View
+        android:id="@+id/seperator1"
+        android:layout_width="fill_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/action_bar_divider_horizontal" />
+
    <LinearLayout
-       
+       android:id="@+id/personLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
@@ -47,6 +53,12 @@
         android:inputType="textEmailAddress" 
         android:textColor="@android:color/black" />
 
+    <View
+        android:id="@+id/seperator2"
+        android:layout_width="fill_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/action_bar_divider_horizontal" />
+
    <TextView
        android:id="@+id/personPhone"
        android:layout_width="fill_parent"
@@ -57,6 +69,12 @@
        android:focusable="false"
        android:inputType="phone"
        android:textColor="@android:color/black" />
+   
+   <View
+        android:id="@+id/seperator3"
+        android:layout_width="fill_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/action_bar_divider_horizontal" />
 
    <TextView
        android:id="@+id/personAddress"
