--- a/res/layout/create_event.xml
+++ b/res/layout/create_event.xml
@@ -47,6 +47,14 @@
             </EditText>
 
             <TextView
+                android:id="@+id/view_event_view_title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:ems="10" 
+                android:textColor="@color/black"
+                android:padding="5dp"/>
+
+            <TextView
                 android:id="@+id/create_event_textview_participants"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -62,6 +70,29 @@
                 android:ems="10"
                 android:focusableInTouchMode="false"
                 android:inputType="time" />
+
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:id="@+id/view_event_view_participants"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10" 
+                    android:textColor="@color/black"
+                    android:padding="5dp" />
+
+                <Button
+                    android:id="@+id/view_event_participants_button"
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:text="Participants" />
+
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -114,6 +145,29 @@
                     android:focusableInTouchMode="false"
                     android:inputType="textPostalAddress" />
             </LinearLayout>
+                        
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:id="@+id/view_event_view_map"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:textColor="@color/black" 
+                    android:padding="5dp"/>
+
+                <Button
+                    android:id="@+id/view_event_map_button"
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:text="Map" />
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/locations_req_text"
