--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent" android:layout_height="fill_parent">
 <com.google.android.maps.MapView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/mapview"
@@ -7,3 +9,12 @@
     android:clickable="true"
     android:apiKey="@string/google_map_api_key_cu"
 />
+<ImageButton 
+    	android:src="@drawable/ic_menu_compass"
+    	android:layout_width="wrap_content"
+        android:layout_height="wrap_content" 
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true" 
+        android:id="@+id/btn_my_location" 
+        android:contentDescription="Show User Location"/>
+</RelativeLayout>
