* Added colors to Notifications to indicate if they are read/unread.

--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -6,5 +6,6 @@
   <color name="black">#000000</color>
   <color name="alice_blue">#F0F8FF</color>
   <color name="ivory">#FFFFF0</color>
+  <color name="notif_unread">#FFFBD1</color>
     
 </resources>
