--- a/trunk/res/layout/list_item.xml
+++ b/trunk/res/layout/list_item.xml
@@ -5,5 +5,6 @@
     android:layout_height="fill_parent"
     android:padding="10dp"
     android:textSize="16sp"
-    android:textColor="@android:color/black"  >
+    android:textColor="@android:color/black" 
+    android:background="@drawable/popup_list_background" >
 </TextView>
